// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Button should render a block split type 1`] = `
<DropdownButtonBase
  buttons={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  disabled={false}
  isBlock={true}
  isOpen={false}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral is-block"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-haspopup={true}
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a default split type 1`] = `
<DropdownButtonBase
  buttons={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  disabled={false}
  isBlock={false}
  isOpen={false}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-haspopup={true}
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a disabled split type 1`] = `
<DropdownButtonBase
  buttons={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  disabled={true}
  isBlock={false}
  isOpen={false}
  requestClose={[Function]}
>
  <button
    aria-disabled={true}
    className="split-button-primary neutral"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="-1"
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={true}
    aria-haspopup={true}
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={true}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tabIndex="-1"
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a split type with custom attributes 1`] = `
<DropdownButtonBase
  buttons={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  disabled={false}
  isBlock={false}
  isOpen={false}
  other-custom-attribute="purple"
  requestClose={[Function]}
  test-custom-attribute={true}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-haspopup={true}
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render a split type with multiple children 1`] = `
<DropdownButtonBase
  buttons={
    Array [
      <Item
        label="1st Option"
        onSelect={[Function]}
      />,
      <Item
        label="2nd Option"
        onSelect={[Function]}
      />,
      <Item
        label="3rd Option"
        onSelect={[Function]}
      />,
    ]
  }
  disabled={false}
  isBlock={false}
  isOpen={false}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-haspopup={true}
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;

exports[`Dropdown Button should render an open split type 1`] = `
<DropdownButtonBase
  buttons={
    <Item
      label="1st Option"
      onSelect={[Function]}
    />
  }
  disabled={false}
  isBlock={false}
  isOpen={false}
  requestClose={[Function]}
>
  <button
    aria-disabled={false}
    className="split-button-primary neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    Primary Option
  </button>
  <button
    aria-disabled={false}
    aria-haspopup={true}
    aria-label="Terra.dropdownButton.moreOptions"
    className="split-button-caret neutral"
    disabled={false}
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    type="button"
  >
    <span
      className="caret-icon"
    />
  </button>
</DropdownButtonBase>
`;
